@@ -1,5 +1,6 @@
 package org.fugerit.java.core.cfg.xml;
 
+import java.io.IOException;
 import java.io.InputStream;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -96,9 +97,25 @@ public class GenericListCatalogConfig<T> extends AbstractConfigurableObject {
 	 */
 	private static final long serialVersionUID = 60670717619176336L;
 	
-	private transient Map<String, Collection<T>> dataMap;
+	// code added to setup a basic conditional serialization - START
 	
-	private transient Set<String> orderedId;
+	private void writeObject(java.io.ObjectOutputStream out) throws IOException {
+		// this class is conditionally serializable, depending on contained object
+		// special situation can be handleded using this method in future
+		out.defaultWriteObject();
+	}
+
+	private void readObject(java.io.ObjectInputStream in) throws IOException, ClassNotFoundException {
+		// this class is conditionally serializable, depending on contained object
+		// special situation can be handleded using this method in future
+		in.defaultReadObject();
+	}
+	
+	// code added to setup a basic conditional serialization - END
+	
+	private Map<String, Collection<T>> dataMap;
+	
+	private Set<String> orderedId;
 	
 	@Getter private Properties generalProps;
 	
