@@ -1,5 +1,7 @@
 ﻿8.2.0 (next)
 ------------------
++ [enhancement [fj-core] loadConfigSafe() method introduced for property catalog [8.2.0-rc.4]
++ [enhancement [fj-core] update fj-test-helper8 version to 0.3.0 (support for serialization test) [8.2.0-rc.4]
 + [enhancement [fj-core] added utilities to close Closeable and AutoCloseable [8.2.0-rc.4]
 + [enhancement [fj-core] conversion utilities for ConfigException and ConfigRuntimeException [8.2.0-rc.3]
 + [enhancement [to reduce hierarchy depth, if the correct interfaces have been used, this should have no impact] :
